# road_robot_preview

./: .gitignore  README.md  docker-compose-dev.yml  docker-compose.yml  nginx.conf  site.conf
.github/workflows/: github-actions-deploy.yml
bot/: Dockerfile  conf.py  main.py  messages.toml  pyproject.toml
bot/buttons/: inline.py
bot/handlers/: __init__.py  commands.py  inline.py
bot/middlewares/: stat.py
web/: pyproject.toml
web/config/: settings.py  urls.py
web/question_app/: actors.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
web/question_app/migrations/: 0001_initial.py  0002_alter_question_image.py
web/telegram_app/: apps.py  models.py  serializers.py  urls.py  views.py
web/telegram_app/migrations/: 0001_initial.py  0002_user_chosen_query_count.py  0003_user_payment.py
