[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.15"
toml = "^0.10.2"
pydantic = "^1.8.2"
furl = "^2.1.3"
loguru = "^0.5.3"
sentry-sdk = "^1.4.3"

[tool.poetry.dev-dependencies]
icecream = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
